# futureyou

./: Cargo.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/views/: form.html  message.html  modals.html  otp-verification.html  verify.html
frontend/src/: form.js  main.js  otp.js  state.js  style.css
src/: lib.rs  main.rs
src/appstate/: database.rs  mod.rs  redis.rs  resendkit.rs
src/appstate/database/: models.rs
src/handlers/: mod.rs
